fixing css layout shifts

--- a/static/styles.css
+++ b/static/styles.css
@@ -16,6 +16,7 @@
  *    5.5. Progress Bar
  *    5.6. Spinner
  *    5.7. Tooltip
+ *    5.8. Social Icons
  * 6. Utilities
  * 7. Media Queries
  * 8. Specific Pages
@@ -30,6 +31,7 @@ html, body {
     height: 100%;
     width: 100%;
     margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 /* 2. Variables */
@@ -48,9 +50,7 @@ body {
     color: var(--light-color);
     display: flex;
     flex-direction: column;
-    font-family: 'Poppins', sans-serif;
     font-size: 100%;
-    font-weight: 400;
     line-height: 1.6;
 }
 
@@ -74,14 +74,15 @@ a:active {
 
 a:focus {
     outline: none;
-    border: 2px solid var(--highlight-color);
+    border: 2px solid transparent;
     padding-left: 3px; /* To compensate the shift from focus */
     padding-right: 3px;
 }
 
 .logo-image {
     height: auto;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+    margin-top: 20px;
     max-width: 100%;
     width: 20%;
 }
@@ -230,68 +231,63 @@ button:hover {
     border-color: var(--light-color);
 }
 
-/*
-.btn-fit {
-    background-color: var(--dark-color);
-    border: 2px solid transparent;
-    border-radius: 5px;
-    color: var(--light-color);
-    padding: 10px 20px;
-    transition: all 0.1s;
-}
-
-.btn-fit:active {
-    background-color: var(--highlight-color);
-    border: 2px solid var(--main-color);
-    color: var(--highlight-color);
-    padding: 10px 20px;
-}
-
-.btn-fit:active:hover {
-    background-color: var(--main-color);
-    border: 2px solid var(--highlight-color);
-    color: var(--main-color);
-    padding: 10px 20px;
-}
-
-.btn-fit:focus {
-    background-color: var(--main-color);
-    border: 2px solid var(--highlight-color);
-    padding: 10px 20px;
-}
-
-.btn-fit:hover {
-    background-color: var(--light-color);
-    border: 2px solid transparent;
-    color: var(--dark-color);
-    padding: 10px 20px;
-}
-*/
-
 /* 5.2. Forms */
-.form-control {
+.form-control, text area, select {
     border: 2px solid transparent; /* To compensate the shift from focus */
+    outline: none; /* Removes default outline */
 }
 
 .form-control:focus, 
-input:focus, 
 textarea:focus,
 select:focus {
-    outline: none; /* Removes default outline */
     border: 2px solid var(--highlight-color); /* Your custom border */
     box-shadow: 0 0 2px var(--highlight-color); /* Custom glow effect */
 }
 
-input[type="checkbox"] {
-    outline: 1px solid transparent; /* To compensate the shift from focus */
-}
-
-input[type="checkbox"]:active {
+.container form {
     background-color: var(--light-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    height: 100%;
 }
 
-input[type="checkbox"]:focus {
-    outline: 1px solid var(--light-color);
+.container input {
+    background-color: #eee;
+    border: 2px solid transparent;
+    margin: 6px 0;
+    padding: 10px 20px;
+    color: var(--accent-color);
+    font-size: 13px;
+    border-radius: 8px;
+    width: 100%;
+    outline: none;
+}
+
+.form-container {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+}
+
+.tick-box {
+    display: flex;
+    align-items: center;
+    outline: 1px solid transparent; /* To compensate the shift from focus */
+    position: relative;
+    cursor: pointer;
+}
+
+.tick-box input:checked {
+    background-color: var(--main-color);
+}
+
+.tick-box label {
+    margin: 0;
+    flex-grow: 1;
 }
 
 .w-fixed {
@@ -301,10 +297,6 @@ input[type="checkbox"]:focus {
 .label-width {
     width: 130px;
     background-color: var(--light-color);
-}
-
-.checkbox-container input:checked {
-    background-color: var(--main-color);
 }
 
 /* 5.3. Alerts */
@@ -408,6 +400,20 @@ header {
     --bs-tooltip-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
+/* 5.8. Social Icons */
+.social-icons {
+    margin: 20px 0;
+}
+
+.social-icons a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 1px;
+    width: 40px;
+    height: 40px;
+}
+
 /* 6. Utilities */
 
 /* 7. Media Queries */
@@ -489,45 +495,6 @@ header {
     margin: 15px 0 10px;
 }
 
-.container form {
-    background-color: var(--light-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    height: 100%;
-}
-
-.container input {
-    background-color: #eee;
-    border: 6px transparent;
-    margin: 6px 0;
-    padding: 10px 20px;
-    color: var(--accent-color);
-    font-size: 13px;
-    border-radius: 8px;
-    width: 100%;
-    outline: none;
-}
-
-.form-container {
-    position: absolute;
-    top: 0;
-    height: 100%;
-    transition: all 0.6s ease-in-out;
-}
-
-.tick-box {
-    display: flex;
-    align-items: center;
-}
-
-.tick-box label {
-    margin: 0;
-    flex-grow: 1;
-}
-
 .log-in {
     left: 0;
     width: 50%;
@@ -561,19 +528,6 @@ header {
         opacity: 1;
         z-index: 5;
     }
-}
-
-.social-icons {
-    margin: 20px 0;
-}
-
-.social-icons a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 1px;
-    width: 40px;
-    height: 40px;
 }
 
 .toggle-container {
